# Food-Security

./: .gitignore  README.md  environment.yml  pyproject.toml  readhis_dashboardindicator.py
data/: FAOSTAT_data_en_11-18-2024.csv  FAO_item_mapping.csv  Prod_templateRibasim_mekong.xlsx  animal_yield.csv  fao-salt-tolerance-parameters.csv  provinces_area.gpkg  test-shapefiles-egypt.xlsx  test_lifestock.tif
examples/: food_security.toml  salinity_correction.toml  salinity_correction_egypt.toml  salinity_correction_vietnam.toml
food_security/: __init__.py  append_labour.py  base.py  cli.py  config.py  data_reader.py  fao_api.py  food_production.py  food_supply.py  food_transfer_coefficient.py  food_value.py  his_reader.py  intersect_shapefiles.py  io.py  main.py  salinity-correction.py  salinity_correction.py  utils.py  water_quality.py
food_security/components/: __init__.py  food_production.py  food_supply.py  food_transfer_coefficient.py  food_value.py
food_security/interface/: base.py
notebooks/: combine_csvs.ipynb  populate-tables.ipynb  zonal-statistics-ssp.ipynb
scripts/: append_labour.py  clip_raster.py  demo_script.py  intersect_shapefiles.py  prep_foodstat.py  readhis_dashboardindicator.py  salinity_correction.py  water_quality.py
tests/: conftest.py  test_config.py  test_data_reader.py  test_fao_api.py  test_food_production.py  test_food_supply.py  test_food_transfer_coefficient.py  test_food_value.py  test_io.py  test_main.py
tests/test_data/: RIB_CULT_prod.his  conversion_table.csv  corrected-yield.csv  food_production_results.fgb  population.csv  test_food_security.toml
