[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "food_security"
authors = [{name = "Tjalling de Jong", email = "tjalling.dejong@deltares.nl"}]
readme = "README.md"
dynamic = ["version", "description"]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120
exclude = ["tests/*.py"]