[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "food_security"
authors = [{name = "Tjalling de Jong", email = "tjalling.dejong@deltares.nl"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "dotenv>=0.9.9",
    "faostat>=1.1.2",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "rasterio>=1.4.3",
    "rasterstats>=0.20.0",
    "scipy>=1.16.0",
    "tomli>=2.2.1",
    "tqdm>=4.69.0",
    "xarray>=2025.7.1",
]


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "N802", "ANN201", "ANN001", "PD901", "S101", "PLR2004"]
